@@ -52,10 +52,10 @@ import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestSuite;
 
-import org.jfree.chart.renderer.xy.XYSplineAndShapeRenderer;
+import org.jfree.chart.renderer.xy.XYSplineRenderer;
 
 /**
- * Tests for the {@link XYSplineAndShapeRenderer} class.
+ * Tests for the {@link XYSplineRenderer} class.
  */
 public class XYSplineAndShapeRendererTests extends TestCase {
 
@@ -82,8 +82,8 @@ public class XYSplineAndShapeRendererTests extends TestCase {
      */
     public void testEquals() {
         
-        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
-        XYSplineAndShapeRenderer r2 = new XYSplineAndShapeRenderer();
+        XYSplineRenderer r1 = new XYSplineRenderer();
+        XYSplineRenderer r2 = new XYSplineRenderer();
         assertEquals(r1, r2);
         assertEquals(r2, r1);
     
@@ -97,8 +97,8 @@ public class XYSplineAndShapeRendererTests extends TestCase {
      * Two objects that are equal are required to return the same hashCode. 
      */
     public void testHashcode() {
-        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
-        XYSplineAndShapeRenderer r2 = new XYSplineAndShapeRenderer();
+        XYSplineRenderer r1 = new XYSplineRenderer();
+        XYSplineRenderer r2 = new XYSplineRenderer();
         assertTrue(r1.equals(r2));
         int h1 = r1.hashCode();
         int h2 = r2.hashCode();
@@ -110,11 +110,11 @@ public class XYSplineAndShapeRendererTests extends TestCase {
      */
     public void testCloning() {
         Rectangle2D legendShape = new Rectangle2D.Double(1.0, 2.0, 3.0, 4.0);
-        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
+        XYSplineRenderer r1 = new XYSplineRenderer();
         r1.setLegendLine(legendShape);
-        XYSplineAndShapeRenderer r2 = null;
+        XYSplineRenderer r2 = null;
         try {
-            r2 = (XYSplineAndShapeRenderer) r1.clone();
+            r2 = (XYSplineRenderer) r1.clone();
         }
         catch (CloneNotSupportedException e) {
             e.printStackTrace();
@@ -129,8 +129,8 @@ public class XYSplineAndShapeRendererTests extends TestCase {
      */
     public void testSerialization() {
 
-        XYSplineAndShapeRenderer r1 = new XYSplineAndShapeRenderer();
-        XYSplineAndShapeRenderer r2 = null;
+        XYSplineRenderer r1 = new XYSplineRenderer();
+        XYSplineRenderer r2 = null;
         try {
             ByteArrayOutputStream buffer = new ByteArrayOutputStream();
             ObjectOutput out = new ObjectOutputStream(buffer);
@@ -139,7 +139,7 @@ public class XYSplineAndShapeRendererTests extends TestCase {
 
             ObjectInput in = new ObjectInputStream(
                     new ByteArrayInputStream(buffer.toByteArray()));
-            r2 = (XYSplineAndShapeRenderer) in.readObject();
+            r2 = (XYSplineRenderer) in.readObject();
             in.close();
         }
         catch (Exception e) {
